other-cel/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-pod-controller-serviceaccount-updates
  annotations:
    policies.kyverno.io/title: Restrict Pod Controller ServiceAccount Updates in CEL Expressions
    policies.kyverno.io/category: Other in CEL 
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.12.1
    kyverno.io/kubernetes-version: "1.26-1.27"
    policies.kyverno.io/description: >-
      ServiceAccounts which have the ability to edit/patch workloads which they created
      may potentially use that privilege to update to a different ServiceAccount with higher
      privileges. This policy, intended to be run in `enforce` mode, blocks updates
      to Pod controllers if those updates modify the serviceAccountName field. Updates to Pods
      directly for this field are not possible as it is immutable once set.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: block-serviceaccount-updates
      match:
        any:
        - resources:
            kinds:
            - DaemonSet
            - Deployment
            - Job
            - StatefulSet
            - ReplicaSet
            - ReplicationController
      celPreconditions: 
      - name: "operation-should-be-update"
        expression: "request.operation == 'UPDATE'"
      validate:
        cel:
          expressions:
            - expression: >-
                object.spec.template.spec.?serviceAccountName.orValue('empty') == oldObject.spec.template.spec.?serviceAccountName.orValue('empty')
              message: >-
                The serviceAccountName field may not be changed once created.
    - name: block-serviceaccount-updates-cronjob
      match:
        any:
        - resources:
            kinds:
            - CronJob
      celPreconditions: 
      - name: "operation-should-be-update"
        expression: "request.operation == 'UPDATE'"
      validate:
        cel:
          expressions:
            - expression: >-
                object.spec.jobTemplate.spec.template.spec.?serviceAccountName.orValue('empty') == oldObject.spec.jobTemplate.spec.template.spec.?serviceAccountName.orValue('empty')
        message: >-
          The serviceAccountName field may not be changed once created.
